crates/templates/tests/snapshots/command_usage_test__impl-21.snap
---
source: crates/templates/tests/command_usage_test.rs
description: Command usage with an option that uses -h as short
expression: output
---
foo_usage() {
  printf "Test simple usage\n"
  printf "\n\033[4m%s\033[0m\n" "Usage:"
  printf "  foo [OPTIONS]\n"
  printf "  foo --help\n"

  printf "\n\033[4m%s\033[0m\n" "Options:"
  printf "  -h --host [<HOST>]\n"
  printf "    Test host option\n"
  printf "  --help\n"
  printf "    Print help\n"
}

