crates/templates/tests/snapshots/command_usage_test__impl-5.snap
---
source: crates/templates/tests/command_usage_test.rs
description: Command usage with default option
expression: output
---
usage_usage() {
  printf "Test simple usage\n"
  printf "\n\033[4m%s\033[0m\n" "Usage:"
  printf "  usage [OPTIONS]\n"
  printf "  usage -h|--help\n"

  printf "\n\033[4m%s\033[0m\n" "Options:"
  printf "  -d --default [<DEFAULT>]\n"
  printf "    Test default option\n"
  printf "    [@default foo]\n"
  printf "  -h --help\n"
  printf "    Print help\n"
}

